@@ -21,7 +21,7 @@ array(%d) {
   ["foo"]=>
   array(%d) {
     [123]=>
-    string(%d) "24575"
+    int(24575)
     [456]=>
     int(123)
   }
